--- a/Calculator/Calculator/MainWindow.xaml
+++ b/Calculator/Calculator/MainWindow.xaml
@@ -5,13 +5,51 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <StackPanel VerticalAlignment="Center" Margin="10">
-            <Label Content="Calculator" Margin="0,0,0,10"/>
-            <TextBox Text="0" x:Name="input1" Margin="0,0,0,10"/>
-            <TextBox Text="0" x:Name="input2" Margin="0,0,0,10"/>
-            <Button Content="Calculate" Background="DodgerBlue" Foreground="White"/>
-        </StackPanel>   
+        Title="Calculator" Height="525" Width="350">
+    <Grid Margin="10" >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+
+        <Label Content="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="4" FontSize="60"/>
+        
+        <Button Content="AC" Grid.Row="1" Margin="5"></Button>
+        <Button Content="+/-" Grid.Row="1" Grid.Column="1" Margin="5"/>
+        <Button Content="+/-" Grid.Row="1" Grid.Column="2" Margin="5"/>
+        <Button Content="%" Grid.Row="1" Grid.Column="2" Margin="5"/>
+        <Button Content="/" Grid.Row="1" Grid.Column="3" Margin="5"/>
+
+        <Button Content="7" Grid.Row="2" Margin="5"></Button>
+        <Button Content="8" Grid.Row="2" Grid.Column="1" Margin="5"/>
+        <Button Content="9" Grid.Row="2" Grid.Column="2" Margin="5"/>
+        <Button Content="*" Grid.Row="2" Grid.Column="3" Margin="5"/>
+
+        <Button Content="4" Grid.Row="3" Margin="5"></Button>
+        <Button Content="5" Grid.Row="3" Grid.Column="1" Margin="5"/>
+        <Button Content="6" Grid.Row="3" Grid.Column="2" Margin="5"/>
+        <Button Content="-" Grid.Row="3" Grid.Column="3" Margin="5"/>
+
+        <Button Content="1" Grid.Row="4" Margin="5"></Button>
+        <Button Content="2" Grid.Row="4" Grid.Column="1" Margin="5"/>
+        <Button Content="3" Grid.Row="4" Grid.Column="2" Margin="5"/>
+        <Button Content="+" Grid.Row="4" Grid.Column="3" Margin="5"/>
+
+        <Button Content="4" Grid.Row="5" Grid.ColumnSpan="2" Margin="5"></Button>
+        <Button Content="." Grid.Row="5" Grid.Column="2" Margin="5"/>
+        <Button Content="-" Grid.Row="5" Grid.Column="3" Margin="5"/>
+
     </Grid>
 </Window>
