--- a/Calculator/Calculator/MainWindow.xaml
+++ b/Calculator/Calculator/MainWindow.xaml
@@ -24,32 +24,31 @@
         </Grid.RowDefinitions>
 
 
-        <Label Content="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="4" FontSize="60"/>
-        
-        <Button Content="AC" Grid.Row="1" Margin="5"></Button>
-        <Button Content="+/-" Grid.Row="1" Grid.Column="1" Margin="5"/>
-        <Button Content="+/-" Grid.Row="1" Grid.Column="2" Margin="5"/>
-        <Button Content="%" Grid.Row="1" Grid.Column="2" Margin="5"/>
-        <Button Content="/" Grid.Row="1" Grid.Column="3" Margin="5"/>
+        <Label x:Name="resultLabel" Content="0" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.ColumnSpan="4" FontSize="60"/>
 
-        <Button Content="7" Grid.Row="2" Margin="5"></Button>
-        <Button Content="8" Grid.Row="2" Grid.Column="1" Margin="5"/>
-        <Button Content="9" Grid.Row="2" Grid.Column="2" Margin="5"/>
-        <Button Content="*" Grid.Row="2" Grid.Column="3" Margin="5"/>
+        <Button x:Name="acButton" Content="AC" Grid.Row="1" Margin="5"/>
+        <Button x:Name="pmButton" Content="+/-" Grid.Row="1" Grid.Column="1" Margin="5"/>
+        <Button x:Name="percentageButton" Content="%" Grid.Row="1" Grid.Column="2" Margin="5"/>
+        <Button x:Name="divideButton" Content="/" Grid.Row="1" Grid.Column="3" Margin="5"/>
 
-        <Button Content="4" Grid.Row="3" Margin="5"></Button>
-        <Button Content="5" Grid.Row="3" Grid.Column="1" Margin="5"/>
-        <Button Content="6" Grid.Row="3" Grid.Column="2" Margin="5"/>
-        <Button Content="-" Grid.Row="3" Grid.Column="3" Margin="5"/>
+        <Button x:Name="sevenButton" Content="7" Grid.Row="2" Margin="5"></Button>
+        <Button x:Name="eightButton" Content="8" Grid.Row="2" Grid.Column="1" Margin="5"/>
+        <Button x:Name="nineButton" Content="9" Grid.Row="2" Grid.Column="2" Margin="5"/>
+        <Button x:Name="multiplyButton" Content="*" Grid.Row="2" Grid.Column="3" Margin="5"/>
 
-        <Button Content="1" Grid.Row="4" Margin="5"></Button>
-        <Button Content="2" Grid.Row="4" Grid.Column="1" Margin="5"/>
-        <Button Content="3" Grid.Row="4" Grid.Column="2" Margin="5"/>
-        <Button Content="+" Grid.Row="4" Grid.Column="3" Margin="5"/>
+        <Button x:Name="fourButton" Content="4" Grid.Row="3" Margin="5"></Button>
+        <Button x:Name="fiveButton" Content="5" Grid.Row="3" Grid.Column="1" Margin="5"/>
+        <Button x:Name="sixButton" Content="6" Grid.Row="3" Grid.Column="2" Margin="5"/>
+        <Button x:Name="minusButton" Content="-" Grid.Row="3" Grid.Column="3" Margin="5"/>
 
-        <Button Content="4" Grid.Row="5" Grid.ColumnSpan="2" Margin="5"></Button>
-        <Button Content="." Grid.Row="5" Grid.Column="2" Margin="5"/>
-        <Button Content="-" Grid.Row="5" Grid.Column="3" Margin="5"/>
+        <Button x:Name="oneButton" Content="1" Grid.Row="4" Margin="5"></Button>
+        <Button x:Name="twoButton" Content="2" Grid.Row="4" Grid.Column="1" Margin="5"/>
+        <Button x:Name="threeButton" Content="3" Grid.Row="4" Grid.Column="2" Margin="5"/>
+        <Button x:Name="plusButton" Content="+" Grid.Row="4" Grid.Column="3" Margin="5"/>
+
+        <Button x:Name="zeroButton" Content="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="5"></Button>
+        <Button x:Name="pointButton" Content="." Grid.Row="5" Grid.Column="2" Margin="5"/>
+        <Button x:Name="equalButton" Content="=" Grid.Row="5" Grid.Column="3" Margin="5"/>
 
     </Grid>
 </Window>
